--- a/web/templates/client_file.html
+++ b/web/templates/client_file.html
@@ -235,10 +235,10 @@
         
         <!-- Action Buttons (right-aligned) -->
         <div style="margin-left: auto; display: flex; gap: 1rem; flex-wrap: wrap;">
-            <a href="{{ url_for('create_session', client_id=client.id) }}" class="btn">+ Session</a>
-            <a href="{{ url_for('create_communication', client_id=client.id) }}" class="btn">+ Communication</a>
-            <a href="{{ url_for('create_absence', client_id=client.id) }}" class="btn">+ Absence</a>
-            <a href="{{ url_for('create_item', client_id=client.id) }}" class="btn">+ Item</a>
+            <a href="{{ url_for('create_session', client_id=client.id) }}" class="btn">Add Session</a>
+            <a href="{{ url_for('create_communication', client_id=client.id) }}" class="btn">Add Communication</a>
+            <a href="{{ url_for('create_absence', client_id=client.id) }}" class="btn">Add Absence</a>
+            <a href="{{ url_for('create_item', client_id=client.id) }}" class="btn">Add Item</a>
         </div>
     </div>
     
