--- a/web/templates/main_view.html
+++ b/web/templates/main_view.html
@@ -133,7 +133,7 @@
         <!-- Add Client Button -->
         <a href="{{ url_for('manage_links') }}" class="btn-primary">Edit Links</a>
         <a href="{{ url_for('manage_types') }}" class="btn-primary">Edit Types</a>
-        <a href="{{ url_for('add_client') }}" class="btn-primary">+ Client</a>
+        <a href="{{ url_for('add_client') }}" class="btn-primary">Add Client</a>
     </div>
 </div>
 
