--- a/web/templates/manage_links.html
+++ b/web/templates/manage_links.html
@@ -14,7 +14,7 @@
             <p style="color: #5B6571; margin-top: 0.5rem;">Review and create arrangements for couples, family, or group therapy</p>
         </div>
         <div style="display: flex; gap: 0.75rem;">
-            <a href="{{ url_for('add_link_group') }}" class="btn-add">+ Link</a>
+            <a href="{{ url_for('add_link_group') }}" class="btn-add">Add Link</a>
         </div>
     </div>
 
