--- a/web/templates/manage_types.html
+++ b/web/templates/manage_types.html
@@ -162,7 +162,7 @@
             <h2>Client Types</h2>
             <p style="color: #5B6571; margin-top: 0.5rem;">Manage client types for filtering and organization</p>
         </div>
-        <a href="{{ url_for('add_type') }}" class="btn-add">+ Type</a>
+        <a href="{{ url_for('add_type') }}" class="btn-add">Add Type</a>
     </div>
     
     <!-- Locked system types -->
